Updated shopping list view mark up and style.

--- a/UI/shoppinglistview.html
+++ b/UI/shoppinglistview.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <p>Shopping Lists</p>
+            <p id="heading"><a>Shopping Lists</a></p>
             <ul class="nav_links">
                 <li><a>contact us</a></li>
                 <li><a>FAQs</a></li>
