--- a/UI/shoppinglistview.html
+++ b/UI/shoppinglistview.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Shopping Lists</title>
-        <link rel="stylesheet" type="text/css" href="shoppinglistview.css" />   
-    </head>
-    <body>
-        <header>
-            <p id="heading"><a>Shopping Lists</a></p>
-            <ul class="nav_links">
-                <li><a>contact us</a></li>
-                <li><a>FAQs</a></li>
-                <li><a>about us</a></li>
-                <li><a>home</a></li>
-            </ul>
-        </header>
-        <div class="sh_lists">
-            
-        </div>
-    </body>
+
+<head>
+    <title>Shopping Lists</title>
+    <link rel="stylesheet" type="text/css" href="shoppinglistview.css" />
+</head>
+
+<body>
+    <header>
+        <p id="heading"><a>Shopping Lists</a></p>
+        <ul class="nav_links">
+            <li><a>contact us</a></li>
+            <li><a>FAQs</a></li>
+            <li><a>about us</a></li>
+            <li><a>home</a></li>
+        </ul>
+    </header>
+    <div class="sh_lists">
+    <p><a href=#>Create New List</a>
+    </p>
+    </div>
+</body>
+
 </html>
